# abyss-crown

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  vcpkg.json
.github/workflows/: macos-build.yml  windows-mingw-build.yml
config/: game_config.txt
docs/: DESIGN.md  REQUIREMENTS.md  TEST_PLAN.md  WINDOWS_CLION_SETUP.md
include/: AiDirector.h  Game.h  Input.h  LlamaDirector.h  Player.h  Renderer.h  ResourcePath.h  RuleBasedDirector.h  Types.h  World.h
scripts/: setup_windows_clion.bat
src/: Game.cpp  Input.cpp  LlamaDirector.cpp  Player.cpp  Renderer.cpp  ResourcePath.cpp  RuleBasedDirector.cpp  World.cpp  main.cpp
